# report_generator

./: README.MD  employees1.csv  factory.py  main.py  pyproject.toml  report.py  requirements.txt
src/: factory.py  main.py  model.py  report.py
tests/: test_factory.py  test_model.py  test_report.py
