[project]
name = "report-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Kadyr",email = "Nekketsu4@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse (>=1.4.0,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "pytest (>=9.0.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
